<resources>
    <string name="app_name">Weather</string>
    <string name="by_me">by Jeremy</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="tab_now">NOW</string>
    <string name="tab_hourly">HOURLY</string>
    <string name="tab_daily">DAILY</string>
    <string name="details_icon_desciption">Icon on details screen describing weather</string>
    <string name="title_current">CURRENT</string>
    <string name="title_current_conditions">Current Conditions</string>
    <string name="title_hourly_forecast">Hourly Forecast</string>
    <string name="title_daily_forecast">Daily Forecast</string>
    <string name="title_humidity">HUMIDITY</string>
    <string name="title_precipitation_probability">%s %%</string>
    <string name="title_precipitation_intensity">%s RATE</string>
    <string name="title_precipitation_accumulation">%s TOTAL</string>
    <string name="title_wind_speed">WIND SPEED</string>
    <string name="title_wind_bearing">WIND BEARING</string>
    <string name="title_cloud_cover">CLOUD COVER</string>
    <string name="title_dew_point">DEW POINT</string>
    <string name="title_pressure">PRESSURE</string>
    <string name="title_visibility">VISIBILITY</string>
    <string name="button_more_details">More Details</string>
    <string name="hour">%1$s %2$s</string>
    <string name="hour_long">%1$s, %2$s %3$s</string>
    <string name="temperature">%sº</string>
    <string name="temperature_hi_low">%1$sº/%2$sº</string>
    <string name="temperature_hi_low_2">%1$s/%2$s</string>
    <string name="pressure">%s in-Hg</string>
    <string name="precipitation_intensity">%s in/hr</string>
    <string name="wind_speed">%s mph</string>
    <string name="visibility">%s in</string>
    <string name="apparent_temperature">(Feels like %sº)</string>
    <string name="apparent_temperature_2">Feels like %sº</string>
    <string name="apparent_temperature_hi_low">Feels like %1$s/%2$s</string>
    <string name="date">%1$s/%2$s</string>
    <string name="date_long">%1$s, %2$s %3$s</string>
    <string name="humidity">%s%%</string>
    <string name="not_applicable">N/A</string>
</resources>
